Bug 914776 - Fix touch event coordinates when rotated. r=m1, a=koi+